--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
     <script src="js/script.js" defer></script>
 </head>
 <body>
+    <ul id="skip">
+		<li><a href="#about">정보 바로가기</a></li>
+		<li><a href="#project">프로젝트 바로가기</a></li>
+		<li><a href="#contact">컨택 바로가기</a></li>
+	</ul>
     <header id="cover">
         <div class="container">
             <div class="titles">
@@ -108,6 +113,7 @@
             </div>
         </div>
         <main id="main">
+            <div class="top-btn"><a href="#"><img src="./img/svg/top.svg" alt="topBtn"></a></div>
             <div class="container">
                 <div class="scroll"></div>
                 <section id="project" class="project1">
@@ -253,6 +259,7 @@
             </div>
         </main>
         <footer id="contact">
+            <div class="top-btn"><a href="#"><img src="./img/svg/top_B.svg" alt="topBtnBlack"></a></div>
             <div class="container">
                 <h2 class="contact">contact me</h2>
                 <div class="con-infos">
