--- a/index.html
+++ b/index.html
@@ -115,7 +115,9 @@
         <main id="main">
             <div class="top-btn"><a href="#"><img src="./img/svg/top.svg" alt="topBtn"></a></div>
             <div class="container">
-                <div class="scroll"></div>
+                <div class="scroll">
+                    <div class="scr-now"></div>
+                </div>
                 <section id="project" class="project1">
                     <div class="pj-wrap">
                         <div class="pj-info">
@@ -136,6 +138,9 @@
                                     <span class="num">&#40;01&#41;</span>
                                     sm &#38;store
                                 </h3>
+                                <div class="sub">
+                                    <span class="bar"></span>Clone
+                                </div>
                                 <div class="sub">
                                     <span class="bar"></span>HTML&#47; CSS&#47; JQuery
                                 </div>
@@ -167,6 +172,9 @@
                                     특허청
                                 </h3>
                                 <div class="sub">
+                                    <span class="bar"></span>Clone
+                                </div>
+                                <div class="sub">
                                     <span class="bar"></span>HTML&#47; CSS&#47; JQuery
                                 </div>
                                 <div class="sub">
@@ -176,7 +184,7 @@
                         </div>
                     </div>
                 </section>
-                <!-- <section id="project" class="project3">
+                <section id="project" class="project3">
                     <div class="pj-wrap">
                         <div class="pj-info">
                             <h4 class="name">&#40;03&#41;&nbsp; Cyphers</h4>
@@ -196,6 +204,9 @@
                                     <span class="num">&#40;03&#41;</span>
                                     cyphers
                                 </h3>
+                                <div class="sub">
+                                    <span class="bar"></span>Clone
+                                </div>
                                 <div class="sub">
                                     <span class="bar"></span>HTML&#47; SCSS&#47; Vanilla JS
                                 </div>
@@ -228,7 +239,7 @@
                             </div>
                         </div>
                     </div>
-                </section> -->
+                </section>
                 <section id="project" class="project5">
                     <div class="pj-wrap">
                         <div class="pj-info">
@@ -250,6 +261,9 @@
                                     py game
                                 </h3>
                                 <div class="sub">
+                                    <span class="bar"></span>Clone
+                                </div>
+                                <div class="sub">
                                     <span class="bar"></span>Python
                                 </div>
                             </div>
@@ -265,7 +279,7 @@
                 <div class="con-infos">
                     <ul class="con-info info-t">
                         <li>E-MAIL</li>
-                        <li>mary022689@naver.com</li>
+                        <li>fordream0226@daum.net</li>
                     </ul>
                     <ul class="con-info info-b">
                         <li>GitHub</li>
