--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                         <div class="pj-info">
                             <h4 class="name">&#40;03&#41;&nbsp; Cyphers</h4>
                             <div class="date">2022.03</div>
-                            <div class="lan">HTML&#47; SASS&#47; Vanilla JS</div>
+                            <div class="lan">HTML&#47; SCSS&#47; Vanilla JS</div>
                         </div>
                         <div class="pj-main">
                             <div class="pj-planet">
