--- a/index.html
+++ b/index.html
@@ -210,14 +210,11 @@
                                 <div class="sub">
                                     <span class="bar"></span>HTML&#47; SCSS&#47; Vanilla JS
                                 </div>
-                                <div class="sub">
-                                    <span class="bar"></span>반응형 리디자인(Responsive Web Redesign)
-                                </div>
                             </div>
                         </div>
                     </div>
                 </section>
-                <section id="project" class="project4">
+                <!-- <section id="project" class="project4">
                     <div class="pj-wrap">
                         <div class="pj-info">
                             <h4 class="name">&#40;04&#41;&nbsp; null</h4>
@@ -239,7 +236,7 @@
                             </div>
                         </div>
                     </div>
-                </section>
+                </section> -->
                 <section id="project" class="project5">
                     <div class="pj-wrap">
                         <div class="pj-info">
