--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                                     <span class="bar"></span>Clone
                                 </div>
                                 <div class="sub">
-                                    <span class="bar"></span>HTML&#47; CSS&#47; JQuery
+                                    <span class="bar"></span>HTML&#47; CSS&#47; JQuery&#47; Swiper
                                 </div>
                                 <div class="sub">
                                     <span class="bar"></span>Zeplin(제플린) 연동
@@ -175,7 +175,7 @@
                                     <span class="bar"></span>Clone
                                 </div>
                                 <div class="sub">
-                                    <span class="bar"></span>HTML&#47; CSS&#47; JQuery
+                                    <span class="bar"></span>HTML&#47; CSS&#47; JQuery&#47; Slick
                                 </div>
                                 <div class="sub">
                                     <span class="bar"></span>반응형 (Responsive Web)
@@ -184,59 +184,6 @@
                         </div>
                     </div>
                 </section>
-                <!-- <section id="project" class="project3">
-                    <div class="pj-wrap">
-                        <div class="pj-info">
-                            <h4 class="name">&#40;03&#41;&nbsp; Cyphers</h4>
-                            <div class="date">2022.05</div>
-                            <div class="lan">HTML&#47; SCSS&#47; Vanilla JS</div>
-                        </div>
-                        <div class="pj-main">
-                            <div class="pj-planet">
-                                <div class="pj-link">
-                                    <a href="https://namesamename.github.io/project3/" title="cyphers" target="_blank">
-                                        <img src="./img/link/cyphers.png" alt="cyphers">
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="pj-title">
-                                <h3 class="title">
-                                    <span class="num">&#40;03&#41;</span>
-                                    cyphers
-                                </h3>
-                                <div class="sub">
-                                    <span class="bar"></span>Clone
-                                </div>
-                                <div class="sub">
-                                    <span class="bar"></span>HTML&#47; SCSS&#47; Vanilla JS
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </section> -->
-                <!-- <section id="project" class="project4">
-                    <div class="pj-wrap">
-                        <div class="pj-info">
-                            <h4 class="name">&#40;04&#41;&nbsp; null</h4>
-                            <div class="date">2022.06</div>
-                            <div class="lan">React</div>
-                        </div>
-                        <div class="pj-main">
-                            <div class="pj-planet">
-                                <div class="pj-link"></div>
-                            </div>
-                            <div class="pj-title">
-                                <h3 class="title">
-                                    <span class="num">&#40;04&#41;</span>
-                                    null
-                                </h3>
-                                <div class="sub">
-                                    <span class="bar"></span>React
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </section> -->
                 <section id="project" class="project5">
                     <div class="pj-wrap">
                         <div class="pj-info">
@@ -267,6 +214,68 @@
                         </div>
                     </div>
                 </section>
+<!--                 <section id="project" class="project3">
+                    <div class="pj-wrap">
+                        <div class="pj-info">
+                            <h4 class="name">&#40;03&#41;&nbsp; Cyphers</h4>
+                            <div class="date">2023.03</div>
+                            <div class="lan">HTML&#47; SCSS&#47; Vanilla JS</div>
+                        </div>
+                        <div class="pj-main">
+                            <div class="pj-planet">
+                                <div class="pj-link">
+                                    <a href="https://namesamename.github.io/project3/" title="cyphers" target="_blank">
+                                        <img src="./img/link/cyphers.png" alt="cyphers">
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="pj-title">
+                                <h3 class="title">
+                                    <span class="num">&#40;03&#41;</span>
+                                    cyphers
+                                </h3>
+                                <div class="sub">
+                                    <span class="bar"></span>Clone
+                                </div>
+                                <div class="sub">
+                                    <span class="bar"></span>HTML&#47; SCSS&#47; Vanilla JS
+                                </div>
+                                <div class="sub">
+                                    <span class="bar"></span>Slick
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section> -->
+               <!--  <section id="project" class="project4">
+                    <div class="pj-wrap">
+                        <div class="pj-info">
+                            <h4 class="name">&#40;04&#41;&nbsp; Hottracks</h4>
+                            <div class="date">2022.06</div>
+                            <div class="lan">React</div>
+                        </div>
+                        <div class="pj-main">
+                            <div class="pj-planet">
+                                <div class="pj-link"></div>
+                            </div>
+                            <div class="pj-title">
+                                <h3 class="title">
+                                    <span class="num">&#40;04&#41;</span>
+                                    Hottracks
+                                </h3>
+                                <div class="sub">
+                                    <span class="bar"></span>Clone
+                                </div>
+                                <div class="sub">
+                                    <span class="bar"></span>React
+                                </div>
+                                <div class="sub">
+                                    <span class="bar"></span>Swiper
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section> -->
             </div>
         </main>
         <footer id="contact">
@@ -276,7 +285,11 @@
                 <div class="con-infos">
                     <ul class="con-info info-t">
                         <li>E-MAIL</li>
-                        <li>fordream0226@daum.net</li>
+                        <li>fordream0226@gmail.com</li>
+                    </ul>
+                    <ul class="con-info info-m">
+                        <li>Number</li>
+                        <li>010-6318-4636</li>
                     </ul>
                     <ul class="con-info info-b">
                         <li>GitHub</li>
