--- a/index.html
+++ b/index.html
@@ -118,6 +118,39 @@
                 <div class="scroll">
                     <div class="scr-now"></div>
                 </div>
+                <section id="project" class="project0">
+                    <div class="pj-wrap">
+                        <div class="pj-info">
+                            <h4 class="name">&#40;00&#41;&nbsp; PORTFOLIO</h4>
+                            <div class="date">2022.05</div>
+                            <div class="lan">HTML&#47; CSS&#47; JQuery</div>
+                        </div>
+                        <div class="pj-main">
+                            <div class="pj-planet">
+                                <div class="pj-link">
+                                    <a href="#" title="portfolio" target="_blank">
+                                        <img src="./img/link/portfolio.png" alt="portfolio">
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="pj-title">
+                                <h3 class="title">
+                                    <span class="num">&#40;00&#41;</span>
+                                    PORTFOLIO
+                                </h3>
+                                <div class="sub">
+                                    <span class="bar"></span>디자인 Figma(피그마) 이용
+                                </div>
+                                <div class="sub">
+                                    <span class="bar"></span>HTML&#47; CSS&#47; JQuery
+                                </div>
+                                <div class="sub">
+                                    <span class="bar"></span>반응형 (Responsive Web)
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
                 <section id="project" class="project1">
                     <div class="pj-wrap">
                         <div class="pj-info">
@@ -240,9 +273,6 @@
                                 <div class="sub">
                                     <span class="bar"></span>HTML&#47; SCSS&#47; Vanilla JS
                                 </div>
-                                <div class="sub">
-                                    <span class="bar"></span>Slick
-                                </div>
                             </div>
                         </div>
                     </div>
@@ -267,10 +297,7 @@
                                     <span class="bar"></span>Clone
                                 </div>
                                 <div class="sub">
-                                    <span class="bar"></span>React
-                                </div>
-                                <div class="sub">
-                                    <span class="bar"></span>Swiper
+                                    <span class="bar"></span>React&#47; Swiper
                                 </div>
                             </div>
                         </div>
