--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                         </div>
                     </div>
                 </section>
-<!--                 <section id="project" class="project3">
+                <section id="project" class="project3">
                     <div class="pj-wrap">
                         <div class="pj-info">
                             <h4 class="name">&#40;03&#41;&nbsp; Cyphers</h4>
@@ -276,7 +276,7 @@
                             </div>
                         </div>
                     </div>
-                </section> -->
+                </section>
                <!--  <section id="project" class="project4">
                     <div class="pj-wrap">
                         <div class="pj-info">
