--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                                     PORTFOLIO
                                 </h3>
                                 <div class="sub">
-                                    <span class="bar"></span>디자인 Figma(피그마) 이용
+                                    <span class="bar"></span>Figma(피그마) 이용 디자인
                                 </div>
                                 <div class="sub">
                                     <span class="bar"></span>HTML&#47; CSS&#47; JQuery
