--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                         <li>
                             <img src="./img/svg/star04.svg" alt="starIco">
                             <span>Education</span>
-                            <span>ERP경영정보과</span>
+                            <span>삼일고등학교</span>
                         </li>
                     </ul>
                     <ul class="info-r">
