--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                         <div class="pj-main">
                             <div class="pj-planet">
                                 <div class="pj-link">
-                                    <a href="#" title="portfolio" target="_blank">
+                                    <a href="https://github.com/namesamename/portfolio" title="portfolio" target="_blank">
                                         <img src="./img/link/portfolio.png" alt="portfolio">
                                     </a>
                                 </div>
@@ -136,16 +136,16 @@
                             <div class="pj-title">
                                 <h3 class="title">
                                     <span class="num">&#40;00&#41;</span>
-                                    PORTFOLIO
+                                    <a href="#">PORTFOLIO</a>
                                 </h3>
-                                <div class="sub">
-                                    <span class="bar"></span>Figma(피그마) 이용 디자인
-                                </div>
                                 <div class="sub">
                                     <span class="bar"></span>HTML&#47; CSS&#47; JQuery
                                 </div>
                                 <div class="sub">
                                     <span class="bar"></span>반응형 (Responsive Web)
+                                </div>
+                                <div class="sub">
+                                    <span class="bar"></span>Figma(피그마) 이용 디자인
                                 </div>
                             </div>
                         </div>
@@ -161,7 +161,7 @@
                         <div class="pj-main">
                             <div class="pj-planet">
                                 <div class="pj-link">
-                                    <a href="https://namesamename.github.io/project1/" title="sm &store" target="_blank">
+                                    <a href="https://github.com/namesamename/project1" title="sm &store" target="_blank">
                                         <img src="./img/link/smstore.png" alt="sm &store">
                                     </a>
                                 </div>
@@ -169,16 +169,16 @@
                             <div class="pj-title">
                                 <h3 class="title">
                                     <span class="num">&#40;01&#41;</span>
-                                    sm &#38;store
+                                    <a href="https://namesamename.github.io/project1/">sm &#38;store</a>
                                 </h3>
-                                <div class="sub">
-                                    <span class="bar"></span>Clone
-                                </div>
                                 <div class="sub">
                                     <span class="bar"></span>HTML&#47; CSS&#47; JQuery&#47; Swiper
                                 </div>
                                 <div class="sub">
                                     <span class="bar"></span>Zeplin(제플린) 연동
+                                </div>
+                                <div class="sub">
+                                    <span class="bar"></span>Clone
                                 </div>
                             </div>
                         </div>
@@ -194,7 +194,7 @@
                         <div class="pj-main">
                             <div class="pj-planet">
                                 <div class="pj-link">
-                                    <a href="https://namesamename.github.io/project2/" title="특허청" target="_blank">
+                                    <a href="https://github.com/namesamename/project2" title="특허청" target="_blank">
                                         <img src="./img/link/kipo.png" alt="특허청">
                                     </a>
                                 </div>
@@ -202,16 +202,16 @@
                             <div class="pj-title">
                                 <h3 class="title">
                                     <span class="num">&#40;02&#41;</span>
-                                    특허청
+                                    <a href="https://namesamename.github.io/project2/">특허청</a>
                                 </h3>
-                                <div class="sub">
-                                    <span class="bar"></span>Clone
-                                </div>
                                 <div class="sub">
                                     <span class="bar"></span>HTML&#47; CSS&#47; JQuery&#47; Slick
                                 </div>
                                 <div class="sub">
                                     <span class="bar"></span>반응형 (Responsive Web)
+                                </div>
+                                <div class="sub">
+                                    <span class="bar"></span>Clone
                                 </div>
                             </div>
                         </div>
@@ -227,7 +227,7 @@
                         <div class="pj-main">
                             <div class="pj-planet">
                                 <div class="pj-link">
-                                    <a href="https://github.com/namesamename/python" title="python" target="_blank">
+                                    <a href="https://github.com/namesamename/python/tree/main/pygame" title="python" target="_blank">
                                         <img src="./img/link/python.PNG" alt="python">
                                     </a>
                                 </div>
@@ -235,13 +235,13 @@
                             <div class="pj-title">
                                 <h3 class="title">
                                     <span class="num">&#40;&#10010;&#41;</span>
-                                    py game
+                                    <a href="https://github.com/namesamename/python/tree/main/pygame">py game</a>
                                 </h3>
                                 <div class="sub">
-                                    <span class="bar"></span>Clone
+                                    <span class="bar"></span>Python
                                 </div>
                                 <div class="sub">
-                                    <span class="bar"></span>Python
+                                    <span class="bar"></span>Clone
                                 </div>
                             </div>
                         </div>
@@ -257,7 +257,7 @@
                         <div class="pj-main">
                             <div class="pj-planet">
                                 <div class="pj-link">
-                                    <a href="https://namesamename.github.io/project3/" title="cyphers" target="_blank">
+                                    <a href="https://github.com/namesamename/project3" title="cyphers" target="_blank">
                                         <img src="./img/link/cyphers.png" alt="cyphers">
                                     </a>
                                 </div>
@@ -265,13 +265,13 @@
                             <div class="pj-title">
                                 <h3 class="title">
                                     <span class="num">&#40;03&#41;</span>
-                                    cyphers
+                                    <a href="https://namesamename.github.io/project3/">cyphers</a>
                                 </h3>
                                 <div class="sub">
-                                    <span class="bar"></span>Clone
+                                    <span class="bar"></span>HTML&#47; SCSS&#47; Vanilla JS
                                 </div>
                                 <div class="sub">
-                                    <span class="bar"></span>HTML&#47; SCSS&#47; Vanilla JS
+                                    <span class="bar"></span>Clone
                                 </div>
                             </div>
                         </div>
