--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                             <div class="pj-title">
                                 <h3 class="title">
                                     <span class="num">&#40;00&#41;</span>
-                                    <a href="#">PORTFOLIO</a>
+                                    <a href="https://www.figma.com/file/vUBcRoSy3ZesdPc2jSFHDK/portfolio?node-id=0%3A1&t=JGeFS8Uit0Y2H63y-1" title="portfolio" target="_blank">PORTFOLIO</a>
                                 </h3>
                                 <div class="sub">
                                     <span class="bar"></span>HTML&#47; CSS&#47; JQuery
@@ -169,7 +169,7 @@
                             <div class="pj-title">
                                 <h3 class="title">
                                     <span class="num">&#40;01&#41;</span>
-                                    <a href="https://namesamename.github.io/project1/">sm &#38;store</a>
+                                    <a href="https://namesamename.github.io/project1/" title="sm &store" target="_blank">sm &#38;store</a>
                                 </h3>
                                 <div class="sub">
                                     <span class="bar"></span>HTML&#47; CSS&#47; JQuery&#47; Swiper
@@ -202,7 +202,7 @@
                             <div class="pj-title">
                                 <h3 class="title">
                                     <span class="num">&#40;02&#41;</span>
-                                    <a href="https://namesamename.github.io/project2/">특허청</a>
+                                    <a href="https://namesamename.github.io/project2/" title="특허청" target="_blank">특허청</a>
                                 </h3>
                                 <div class="sub">
                                     <span class="bar"></span>HTML&#47; CSS&#47; JQuery&#47; Slick
@@ -235,7 +235,7 @@
                             <div class="pj-title">
                                 <h3 class="title">
                                     <span class="num">&#40;&#10010;&#41;</span>
-                                    <a href="https://github.com/namesamename/python/tree/main/pygame">py game</a>
+                                    <a href="https://github.com/namesamename/python/tree/main/pygame" title="python" target="_blank">py game</a>
                                 </h3>
                                 <div class="sub">
                                     <span class="bar"></span>Python
@@ -265,7 +265,7 @@
                             <div class="pj-title">
                                 <h3 class="title">
                                     <span class="num">&#40;03&#41;</span>
-                                    <a href="https://namesamename.github.io/project3/">cyphers</a>
+                                    <a href="https://namesamename.github.io/project3/" title="cyphers" target="_blank">cyphers</a>
                                 </h3>
                                 <div class="sub">
                                     <span class="bar"></span>HTML&#47; SCSS&#47; Vanilla JS
@@ -277,32 +277,6 @@
                         </div>
                     </div>
                 </section>
-               <!--  <section id="project" class="project4">
-                    <div class="pj-wrap">
-                        <div class="pj-info">
-                            <h4 class="name">&#40;04&#41;&nbsp; Hottracks</h4>
-                            <div class="date">2022.06</div>
-                            <div class="lan">React</div>
-                        </div>
-                        <div class="pj-main">
-                            <div class="pj-planet">
-                                <div class="pj-link"></div>
-                            </div>
-                            <div class="pj-title">
-                                <h3 class="title">
-                                    <span class="num">&#40;04&#41;</span>
-                                    Hottracks
-                                </h3>
-                                <div class="sub">
-                                    <span class="bar"></span>Clone
-                                </div>
-                                <div class="sub">
-                                    <span class="bar"></span>React&#47; Swiper
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </section> -->
             </div>
         </main>
         <footer id="contact">
