--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         <li>
                             <img src="./img/svg/star04.svg" alt="starIco">
                             <span>Address</span>
-                            <span>경기도 수원</span>
+                            <span>경기도 화성</span>
                         </li>
                         <li>
                             <img src="./img/svg/star04.svg" alt="starIco">
